// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Tree RTL 1`] = `


`;

exports[`Storyshots Components/Tree Tree With Expanded Level 1 1`] = `
<section>
  

  <ul
    aria-label="Root Tree"
    class="fd-tree expanded-level-1"
    id="TREE1L1"
    role="tree"
  >
    
    
    <li
      aria-expanded="true"
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <button
          aria-controls="TREE1L2"
          aria-expanded="true"
          aria-haspopup="true"
          aria-label="Expand level 2"
          class="fd-tree__expander is-expanded"
          tabindex="0"
        />
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <ul
        aria-hidden="false"
        class="fd-tree"
        id="TREE1L2"
        role="group"
      >
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <button
              aria-label="Expander"
              class="fd-tree__expander"
              tabindex="0"
            />
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
        
      </ul>
      
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
    
      </div>
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1 with very long text that does not wrap ... perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <div
          class="fd-tree__content fd-tree__content--wrap"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1 with very long text and wrapping behaviour ... perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </li>
    

  </ul>
  


  <br />
  <br />
  


  <h3>
    Compact Mode 
  </h3>
  


  <ul
    aria-label="Root Tree"
    class="fd-tree fd-tree--compact expanded-level-1"
    id="TREE1CL1"
    role="tree"
  >
    
    
    <li
      aria-expanded="true"
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <button
          aria-controls="TREE1CL2"
          aria-expanded="true"
          aria-haspopup="true"
          aria-label="Expand level 2"
          class="fd-tree__expander is-expanded"
          tabindex="0"
        />
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <ul
        aria-hidden="false"
        class="fd-tree"
        id="TREE1CL2"
        role="group"
      >
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <button
              aria-label="Expander"
              class="fd-tree__expander"
              tabindex="0"
            />
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
        
      </ul>
      
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
    
      </div>
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1 with very long text that does not wrap ... perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <div
          class="fd-tree__content fd-tree__content--wrap"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1 with very long text and wrapping behaviour ... perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/Tree Tree With Expanded Level 2 And Borderless Design 1`] = `


`;

exports[`Storyshots Components/Tree Tree With Expanded Level 3 And Highlight Indicator 1`] = `


`;

exports[`Storyshots Components/Tree Tree With Expanded Level 6 And Navigation Links 1`] = `
<section>
  

  <ul
    aria-label="Root Tree"
    class="fd-tree expanded-level-6"
    id="TREE6CL1"
    role="tree"
  >
    
    
    <li
      aria-expanded="true"
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container fd-tree__item-container--active has-highlight-indicator--success"
      >
        
            
        <button
          aria-controls="TREE6CL2"
          aria-expanded="true"
          aria-haspopup="true"
          aria-label="Expand level 2"
          class="fd-tree__expander is-expanded"
        />
        
            
        <a
          class="fd-tree__content has-navigation-indicator"
          href="https://sap.github.io/fundamental/"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </a>
        
        
      </div>
      
        
      <ul
        aria-hidden="false"
        class="fd-tree"
        id="TREE6CL2"
        role="group"
      >
        
            
        <li
          aria-expanded="true"
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container has-highlight-indicator--warning"
          >
            
                    
            <button
              aria-controls="TREE6CL3"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="Expand level 3"
              class="fd-tree__expander is-expanded"
            />
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
                
          <ul
            aria-hidden="false"
            class="fd-tree"
            id="TREE6CL3"
            role="group"
          >
            
                    
            <li
              aria-expanded="true"
              aria-level="3"
              class="fd-tree__item"
              role="treeitem"
            >
              
                        
              <div
                class="fd-tree__item-container fd-tree__item-container--active has-highlight-indicator--error"
              >
                
                            
                <button
                  aria-controls="TREE6CL4"
                  aria-expanded="true"
                  aria-haspopup="true"
                  aria-label="Expand level 4"
                  class="fd-tree__expander is-expanded"
                />
                
                            
                <a
                  class="fd-tree__content has-navigation-indicator"
                  href="https://sap.github.io/fundamental/"
                >
                  
                                
                  <span
                    class="fd-tree__text"
                  >
                    Level 3
                  </span>
                  
                            
                </a>
                
                        
              </div>
              
                        
              <ul
                aria-hidden="false"
                class="fd-tree"
                id="TREE6CL4"
                role="group"
              >
                
                            
                <li
                  aria-expanded="true"
                  aria-level="4"
                  class="fd-tree__item"
                  role="treeitem"
                >
                  
                                
                  <div
                    class="fd-tree__item-container has-highlight-indicator"
                  >
                    
                                    
                    <button
                      aria-controls="TREE6CL5"
                      aria-expanded="true"
                      aria-haspopup="true"
                      aria-label="Expand level 5"
                      class="fd-tree__expander is-expanded"
                    />
                    
                                    
                    <div
                      class="fd-tree__content"
                    >
                      
                                        
                      <span
                        class="fd-tree__text"
                      >
                        Level 4
                      </span>
                      
                                    
                    </div>
                    
                                
                  </div>
                  
                                
                  <ul
                    aria-hidden="false"
                    class="fd-tree"
                    id="TREE6CL5"
                    role="group"
                  >
                    
                                    
                    <li
                      aria-expanded="true"
                      aria-level="5"
                      class="fd-tree__item"
                      role="treeitem"
                    >
                      
                                        
                      <div
                        class="fd-tree__item-container"
                      >
                        
                                            
                        <button
                          aria-controls="TREE6CL6"
                          aria-expanded="true"
                          aria-haspopup="true"
                          aria-label="Expand level 6"
                          class="fd-tree__expander is-expanded"
                        />
                        
                                            
                        <div
                          class="fd-tree__content"
                        >
                          
                                                
                          <span
                            class="fd-tree__text"
                          >
                            Level 5
                          </span>
                          
                                            
                        </div>
                        
                                        
                      </div>
                      
                                        
                      <ul
                        aria-hidden="false"
                        class="fd-tree"
                        id="TREE6CL6"
                        role="group"
                      >
                        
                                            
                        <li
                          aria-expanded="true"
                          aria-level="6"
                          class="fd-tree__item"
                          role="treeitem"
                        >
                          
                                                
                          <div
                            class="fd-tree__item-container"
                          >
                            
                                                    
                            <button
                              aria-controls="TREE6CL7"
                              aria-expanded="true"
                              aria-haspopup="true"
                              aria-label="Expand level 7"
                              class="fd-tree__expander is-expanded"
                            />
                            
                                                    
                            <div
                              class="fd-tree__content"
                            >
                              
                                                        
                              <span
                                class="fd-tree__text"
                              >
                                Level 6
                              </span>
                              
                                                    
                            </div>
                            
                                                
                          </div>
                          
                                                
                          <ul
                            aria-hidden="false"
                            class="fd-tree"
                            id="TREE6CL7"
                            role="group"
                          >
                            
                                                    
                            <li
                              aria-level="7"
                              class="fd-tree__item"
                              role="treeitem"
                            >
                              
                                                        
                              <div
                                class="fd-tree__item-container"
                              >
                                
                                                            
                                <button
                                  aria-label="Expander"
                                  class="fd-tree__expander"
                                />
                                
                                                            
                                <div
                                  class="fd-tree__content"
                                >
                                  
                                                                
                                  <span
                                    class="fd-tree__text"
                                  >
                                    Level 7
                                  </span>
                                  
                                                            
                                </div>
                                
                                                        
                              </div>
                              
                                                    
                            </li>
                            
                                                    
                            <li
                              aria-level="7"
                              class="fd-tree__item"
                              role="treeitem"
                            >
                              
                                                        
                              <div
                                class="fd-tree__item-container"
                              >
                                
                                                            
                                <div
                                  class="fd-tree__content"
                                >
                                  
                                                                
                                  <span
                                    class="fd-tree__text"
                                  >
                                    Level 7
                                  </span>
                                  
                                                            
                                </div>
                                
                                                        
                              </div>
                              
                                                    
                            </li>
                            
                                                
                          </ul>
                          
                                            
                        </li>
                        
                                            
                        <li
                          aria-level="6"
                          class="fd-tree__item"
                          role="treeitem"
                        >
                          
                                                
                          <div
                            class="fd-tree__item-container has-highlight-indicator"
                          >
                            
                                                    
                            <div
                              class="fd-tree__content"
                            >
                              
                                                        
                              <span
                                class="fd-tree__text"
                              >
                                Level 6
                              </span>
                              
                                                    
                            </div>
                            
                                                
                          </div>
                          
                                            
                        </li>
                        
                                        
                      </ul>
                      
                                    
                    </li>
                    
                                    
                    <li
                      aria-level="5"
                      class="fd-tree__item"
                      role="treeitem"
                    >
                      
                                        
                      <div
                        class="fd-tree__item-container has-highlight-indicator--success"
                      >
                        
                                            
                        <div
                          class="fd-tree__content"
                        >
                          
                                                
                          <span
                            class="fd-tree__text"
                          >
                            Level 5
                          </span>
                          
                                            
                        </div>
                        
                                        
                      </div>
                      
                                    
                    </li>
                    
                                
                  </ul>
                  
                            
                </li>
                
                            
                <li
                  aria-level="4"
                  class="fd-tree__item"
                  role="treeitem"
                >
                  
                                
                  <div
                    class="fd-tree__item-container fd-tree__item-container--active"
                  >
                    
                                    
                    <a
                      class="fd-tree__content has-navigation-indicator"
                      href="https://sap.github.io/fundamental/"
                    >
                      
                                        
                      <span
                        class="fd-tree__text"
                      >
                        Level 4
                      </span>
                      
                                    
                    </a>
                    
                                
                  </div>
                  
                            
                </li>
                
                        
              </ul>
              
                    
            </li>
            
                    
            <li
              aria-level="3"
              class="fd-tree__item"
              role="treeitem"
            >
              
                        
              <div
                class="fd-tree__item-container fd-tree__item-container--active"
              >
                
                            
                <a
                  class="fd-tree__content has-navigation-indicator"
                  href="https://sap.github.io/fundamental/"
                >
                  
                                
                  <span
                    class="fd-tree__text"
                  >
                    Level 3
                  </span>
                  
                            
                </a>
                
                        
              </div>
              
                    
            </li>
            
                
          </ul>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
        
      </ul>
      
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container fd-tree__item-container--active has-highlight-indicator--success is-navigated"
      >
        
            
        <a
          class="fd-tree__content has-navigation-indicator"
          href="https://sap.github.io/fundamental/"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </a>
        
        
      </div>
      
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container has-highlight-indicator--success"
      >
        
        
        <a
          class="fd-tree__content has-navigation-indicator"
          href="https://sap.github.io/fundamental/"
        >
          
            
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
        
        </a>
        
        
      </div>
      
    
    </li>
    

  </ul>
  


  <br />
  <br />
  


  <h3>
    Tree with Expanded Level 6 and Active Tree Items (All Tree Items) 
  </h3>
  

  <ul
    aria-label="Root Tree"
    class="fd-tree fd-tree--active fd-tree--compact expanded-level-6"
    id="TREE6L1"
    role="tree"
  >
    
    
    <li
      aria-expanded="true"
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container has-highlight-indicator--success"
      >
        
            
        <button
          aria-controls="TREE6L2"
          aria-expanded="true"
          aria-haspopup="true"
          aria-label="Expand level 2"
          class="fd-tree__expander is-expanded"
        />
        
            
        <a
          class="fd-tree__content has-navigation-indicator"
          href="https://sap.github.io/fundamental/"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </a>
        
        
      </div>
      
        
      <ul
        aria-hidden="false"
        class="fd-tree"
        id="TREE6L2"
        role="group"
      >
        
            
        <li
          aria-expanded="true"
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container has-highlight-indicator--warning"
          >
            
                    
            <button
              aria-controls="TREE6L3"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="Expand level 3"
              class="fd-tree__expander is-expanded"
            />
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
                
          <ul
            aria-hidden="false"
            class="fd-tree"
            id="TREE6L3"
            role="group"
          >
            
                    
            <li
              aria-expanded="true"
              aria-level="3"
              class="fd-tree__item"
              role="treeitem"
            >
              
                        
              <div
                class="fd-tree__item-container has-highlight-indicator--error"
              >
                
                            
                <button
                  aria-controls="TREE6L4"
                  aria-expanded="true"
                  aria-haspopup="true"
                  aria-label="Expand level 4"
                  class="fd-tree__expander is-expanded"
                />
                
                            
                <a
                  class="fd-tree__content has-navigation-indicator"
                  href="https://sap.github.io/fundamental/"
                >
                  
                                
                  <span
                    class="fd-tree__text"
                  >
                    Level 3
                  </span>
                  
                            
                </a>
                
                        
              </div>
              
                        
              <ul
                aria-hidden="false"
                class="fd-tree"
                id="TREE6L4"
                role="group"
              >
                
                            
                <li
                  aria-expanded="true"
                  aria-level="4"
                  class="fd-tree__item"
                  role="treeitem"
                >
                  
                                
                  <div
                    class="fd-tree__item-container has-highlight-indicator"
                  >
                    
                                    
                    <button
                      aria-controls="TREE6L5"
                      aria-expanded="true"
                      aria-haspopup="true"
                      aria-label="Expand level 5"
                      class="fd-tree__expander is-expanded"
                    />
                    
                                    
                    <div
                      class="fd-tree__content"
                    >
                      
                                        
                      <span
                        class="fd-tree__text"
                      >
                        Level 4
                      </span>
                      
                                    
                    </div>
                    
                                
                  </div>
                  
                                
                  <ul
                    aria-hidden="false"
                    class="fd-tree"
                    id="TREE6L5"
                    role="group"
                  >
                    
                                    
                    <li
                      aria-expanded="true"
                      aria-level="5"
                      class="fd-tree__item"
                      role="treeitem"
                    >
                      
                                        
                      <div
                        class="fd-tree__item-container"
                      >
                        
                                            
                        <button
                          aria-controls="TREE6L6"
                          aria-expanded="true"
                          aria-haspopup="true"
                          aria-label="Expand level 6"
                          class="fd-tree__expander is-expanded"
                        />
                        
                                            
                        <div
                          class="fd-tree__content"
                        >
                          
                                                
                          <span
                            class="fd-tree__text"
                          >
                            Level 5
                          </span>
                          
                                            
                        </div>
                        
                                        
                      </div>
                      
                                        
                      <ul
                        aria-hidden="false"
                        class="fd-tree"
                        id="TREE6L6"
                        role="group"
                      >
                        
                                            
                        <li
                          aria-expanded="true"
                          aria-level="6"
                          class="fd-tree__item"
                          role="treeitem"
                        >
                          
                                                
                          <div
                            class="fd-tree__item-container"
                          >
                            
                                                    
                            <button
                              aria-controls="TREE6L7"
                              aria-expanded="true"
                              aria-haspopup="true"
                              aria-label="Expand level 7"
                              class="fd-tree__expander is-expanded"
                            />
                            
                                                    
                            <div
                              class="fd-tree__content"
                            >
                              
                                                        
                              <span
                                class="fd-tree__text"
                              >
                                Level 6
                              </span>
                              
                                                    
                            </div>
                            
                                                
                          </div>
                          
                                                
                          <ul
                            aria-hidden="false"
                            class="fd-tree"
                            id="TREE6L7"
                            role="group"
                          >
                            
                                                    
                            <li
                              aria-level="7"
                              class="fd-tree__item"
                              role="treeitem"
                            >
                              
                                                        
                              <div
                                class="fd-tree__item-container"
                              >
                                
                                                            
                                <button
                                  aria-label="Expander"
                                  class="fd-tree__expander"
                                />
                                
                                                            
                                <div
                                  class="fd-tree__content"
                                >
                                  
                                                                
                                  <span
                                    class="fd-tree__text"
                                  >
                                    Level 7
                                  </span>
                                  
                                                            
                                </div>
                                
                                                        
                              </div>
                              
                                                    
                            </li>
                            
                                                    
                            <li
                              aria-level="7"
                              class="fd-tree__item"
                              role="treeitem"
                            >
                              
                                                        
                              <div
                                class="fd-tree__item-container"
                              >
                                
                                                            
                                <div
                                  class="fd-tree__content"
                                >
                                  
                                                                
                                  <span
                                    class="fd-tree__text"
                                  >
                                    Level 7
                                  </span>
                                  
                                                            
                                </div>
                                
                                                        
                              </div>
                              
                                                    
                            </li>
                            
                                                
                          </ul>
                          
                                            
                        </li>
                        
                                            
                        <li
                          aria-level="6"
                          class="fd-tree__item"
                          role="treeitem"
                        >
                          
                                                
                          <div
                            class="fd-tree__item-container has-highlight-indicator"
                          >
                            
                                                    
                            <div
                              class="fd-tree__content"
                            >
                              
                                                        
                              <span
                                class="fd-tree__text"
                              >
                                Level 6
                              </span>
                              
                                                    
                            </div>
                            
                                                
                          </div>
                          
                                            
                        </li>
                        
                                        
                      </ul>
                      
                                    
                    </li>
                    
                                    
                    <li
                      aria-level="5"
                      class="fd-tree__item"
                      role="treeitem"
                    >
                      
                                        
                      <div
                        class="fd-tree__item-container has-highlight-indicator--success"
                      >
                        
                                            
                        <div
                          class="fd-tree__content"
                        >
                          
                                                
                          <span
                            class="fd-tree__text"
                          >
                            Level 5
                          </span>
                          
                                            
                        </div>
                        
                                        
                      </div>
                      
                                    
                    </li>
                    
                                
                  </ul>
                  
                            
                </li>
                
                            
                <li
                  aria-level="4"
                  class="fd-tree__item"
                  role="treeitem"
                >
                  
                                
                  <div
                    class="fd-tree__item-container"
                  >
                    
                                    
                    <a
                      class="fd-tree__content has-navigation-indicator"
                      href="https://sap.github.io/fundamental/"
                    >
                      
                                        
                      <span
                        class="fd-tree__text"
                      >
                        Level 4
                      </span>
                      
                                    
                    </a>
                    
                                
                  </div>
                  
                            
                </li>
                
                        
              </ul>
              
                    
            </li>
            
                    
            <li
              aria-level="3"
              class="fd-tree__item"
              role="treeitem"
            >
              
                        
              <div
                class="fd-tree__item-container"
              >
                
                            
                <a
                  class="fd-tree__content has-navigation-indicator"
                  href="https://sap.github.io/fundamental/"
                >
                  
                                
                  <span
                    class="fd-tree__text"
                  >
                    Level 3
                  </span>
                  
                            
                </a>
                
                        
              </div>
              
                    
            </li>
            
                
          </ul>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
        
      </ul>
      
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container has-highlight-indicator--success is-navigated"
      >
        
            
        <a
          class="fd-tree__content has-navigation-indicator"
          href="https://sap.github.io/fundamental/"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </a>
        
        
      </div>
      
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container has-highlight-indicator--success"
      >
        
        
        <a
          class="fd-tree__content has-navigation-indicator"
          href="https://sap.github.io/fundamental/"
        >
          
            
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
        
        </a>
        
        
      </div>
      
    
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/Tree Tree With No Data 1`] = `


`;

exports[`Storyshots Components/Tree Tree With Selection 1`] = `
<section>
  

  <h3>
    Multi Selection Left
  </h3>
  

  <ul
    aria-label="Root Tree"
    class="fd-tree expanded-level-1"
    id="TREESELL1"
    role="tree"
  >
    
    
    <li
      aria-expanded="true"
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container is-selected"
      >
        
            
        <button
          aria-controls="TREESELL2"
          aria-expanded="true"
          aria-haspopup="true"
          aria-label="Expand level 2"
          class="fd-tree__expander is-expanded"
          tabindex="0"
        />
        
            
        <div
          class="fd-form-item fd-tree__form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox"
            id="Ai4ez1"
            type="checkbox"
          />
          
                
          <label
            aria-label="checkbox"
            class="fd-checkbox__label"
            for="Ai4ez1"
            tabindex="-1"
          />
          
            
        </div>
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <ul
        aria-hidden="false"
        class="fd-tree"
        id="TREESELL2"
        role="group"
      >
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <button
              aria-label="Expander"
              class="fd-tree__expander"
              tabindex="0"
            />
            
                    
            <div
              class="fd-form-item fd-tree__form-item"
            >
              
                        
              <input
                class="fd-checkbox"
                id="Ai4ez2"
                type="checkbox"
              />
              
                        
              <label
                aria-label="checkbox"
                class="fd-checkbox__label"
                for="Ai4ez2"
                tabindex="-1"
              />
              
                    
            </div>
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container is-selected"
          >
            
                    
            <div
              class="fd-form-item fd-tree__form-item"
            >
              
                        
              <input
                checked=""
                class="fd-checkbox"
                id="Ai4ez3"
                type="checkbox"
              />
              
                        
              <label
                aria-label="checkbox"
                class="fd-checkbox__label"
                for="Ai4ez3"
                tabindex="-1"
              />
              
                    
            </div>
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <div
              class="fd-form-item fd-tree__form-item"
            >
              
                        
              <input
                class="fd-checkbox"
                id="Ai4ez4"
                type="checkbox"
              />
              
                        
              <label
                aria-label="checkbox"
                class="fd-checkbox__label"
                for="Ai4ez4"
                tabindex="-1"
              />
              
                    
            </div>
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
        
      </ul>
      
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <div
          class="fd-form-item fd-tree__form-item"
        >
          
                
          <input
            class="fd-checkbox"
            id="Ai4ez5"
            type="checkbox"
          />
          
                
          <label
            aria-label="checkbox"
            class="fd-checkbox__label"
            for="Ai4ez5"
            tabindex="-1"
          />
          
            
        </div>
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
    
      </div>
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <div
          class="fd-form-item fd-tree__form-item"
        >
          
                
          <input
            class="fd-checkbox"
            id="Ai4ez6"
            type="checkbox"
          />
          
                
          <label
            aria-label="checkbox"
            class="fd-checkbox__label"
            for="Ai4ez6"
            tabindex="-1"
          />
          
            
        </div>
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </li>
    

  </ul>
  


  <br />
  <br />
  


  <h3>
    Multi Selection Right, Compact Mode
  </h3>
  


  <ul
    aria-label="Root Tree"
    class="fd-tree fd-tree--compact fd-tree--no-border expanded-level-1"
    id="TREESELCL1"
    role="tree"
  >
    
    
    <li
      aria-expanded="true"
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container is-selected"
      >
        
            
        <button
          aria-controls="TREESELCL2"
          aria-expanded="true"
          aria-haspopup="true"
          aria-label="Expand level 2"
          class="fd-tree__expander is-expanded"
          tabindex="0"
        />
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
            
        <div
          class="fd-form-item fd-tree__form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox fd-checkbox--compact"
            id="Ai4ezA"
            type="checkbox"
          />
          
                
          <label
            aria-label="checkbox"
            class="fd-checkbox__label fd-checkbox__label--compact"
            for="Ai4ezA"
            tabindex="-1"
          />
          
            
        </div>
        
        
      </div>
      
        
      <ul
        aria-hidden="false"
        class="fd-tree"
        id="TREESELCL2"
        role="group"
      >
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <button
              aria-label="Expander"
              class="fd-tree__expander"
              tabindex="0"
            />
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                    
            <div
              class="fd-form-item fd-tree__form-item"
            >
              
                        
              <input
                class="fd-checkbox fd-checkbox--compact"
                id="Ai4ezB"
                type="checkbox"
              />
              
                        
              <label
                aria-label="checkbox"
                class="fd-checkbox__label fd-checkbox__label--compact"
                for="Ai4ezB"
                tabindex="-1"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                    
            <div
              class="fd-form-item fd-tree__form-item"
            >
              
                        
              <input
                class="fd-checkbox fd-checkbox--compact"
                id="Ai4ezC"
                type="checkbox"
              />
              
                        
              <label
                aria-label="checkbox"
                class="fd-checkbox__label fd-checkbox__label--compact"
                for="Ai4ezC"
                tabindex="-1"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                    
            <div
              class="fd-form-item fd-tree__form-item"
            >
              
                        
              <input
                class="fd-checkbox fd-checkbox--compact"
                id="Ai4ezD"
                type="checkbox"
              />
              
                        
              <label
                aria-label="checkbox"
                class="fd-checkbox__label fd-checkbox__label--compact"
                for="Ai4ezD"
                tabindex="-1"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
        
      </ul>
      
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container is-selected"
      >
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
                
        <input
          checked=""
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ezEE"
          type="checkbox"
        />
        
                
        <label
          aria-label="checkbox"
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ezEE"
          tabindex="-1"
        />
        
            
      </div>
      
        
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
            
        <div
          class="fd-form-item fd-tree__form-item"
        >
          
                
          <input
            class="fd-checkbox fd-checkbox--compact"
            id="Ai4ezF"
            type="checkbox"
          />
          
                
          <label
            aria-label="checkbox"
            class="fd-checkbox__label fd-checkbox__label--compact"
            for="Ai4ezF"
            tabindex="-1"
          />
          
            
        </div>
        
        
      </div>
      
    
    </li>
    

  </ul>
  


  <br />
  <br />
  


  <h3>
    Single Selection Left
  </h3>
  


  <ul
    aria-label="Root Tree"
    class="fd-tree expanded-level-1"
    id="TREESESSLL1"
    role="tree"
  >
    
    
    <li
      aria-expanded="true"
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container is-selected"
      >
        
            
        <button
          aria-controls="TREESESSLL2"
          aria-expanded="true"
          aria-haspopup="true"
          aria-label="Expand level 2"
          class="fd-tree__expander is-expanded"
          tabindex="0"
        />
        
            
        <div
          class="fd-form-item fd-tree__form-item"
        >
          
                
          <input
            checked=""
            class="fd-radio"
            id="pDidh761"
            name="radio1"
            type="radio"
          />
          
                
          <label
            aria-label="radio button"
            class="fd-radio__label"
            for="pDidh761"
          />
          
            
        </div>
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <ul
        aria-hidden="false"
        class="fd-tree"
        id="TREESESSLL2"
        role="group"
      >
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <button
              aria-label="Expander"
              class="fd-tree__expander"
              tabindex="0"
            />
            
                    
            <div
              class="fd-form-item fd-tree__form-item"
            >
              
                        
              <input
                class="fd-radio"
                id="pDidh7612"
                name="radio1"
                type="radio"
              />
              
                        
              <label
                aria-label="radio button"
                class="fd-radio__label"
                for="pDidh7612"
              />
              
                    
            </div>
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <div
              class="fd-form-item fd-tree__form-item"
            >
              
                        
              <input
                class="fd-radio"
                id="pDidh7613"
                name="radio1"
                type="radio"
              />
              
                        
              <label
                aria-label="radio button"
                class="fd-radio__label"
                for="pDidh7613"
              />
              
                    
            </div>
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
            
        <li
          aria-level="2"
          class="fd-tree__item"
          role="treeitem"
        >
          
                
          <div
            class="fd-tree__item-container"
          >
            
                    
            <div
              class="fd-form-item fd-tree__form-item"
            >
              
                        
              <input
                class="fd-radio"
                id="pDidh764"
                name="radio3"
                type="radio"
              />
              
                        
              <label
                aria-label="radio button"
                class="fd-radio__label"
                for="pDidh764"
              />
              
                    
            </div>
            
                    
            <div
              class="fd-tree__content"
            >
              
                        
              <span
                class="fd-tree__text"
              >
                Level 2
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </li>
        
        
      </ul>
      
    
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <div
          class="fd-form-item fd-tree__form-item"
        >
          
            
          <input
            class="fd-radio"
            disabled=""
            id="pDidh76r4"
            name="radio3"
            type="radio"
          />
          
            
          <label
            aria-label="radio button"
            class="fd-radio__label"
            for="pDidh76r4"
          />
          
            
        </div>
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
    
      </div>
    </li>
    
    
    <li
      aria-level="1"
      class="fd-tree__item"
      role="treeitem"
    >
      
        
      <div
        class="fd-tree__item-container"
      >
        
            
        <div
          class="fd-form-item fd-tree__form-item"
        >
          
                
          <input
            class="fd-radio"
            disabled=""
            id="pDidh764Y6"
            name="radio3"
            type="radio"
          />
          
                
          <label
            aria-label="radio button"
            class="fd-radio__label"
            for="pDidh764Y6"
          />
          
            
        </div>
        
            
        <div
          class="fd-tree__content"
        >
          
                
          <span
            class="fd-tree__text"
          >
            Level 1
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </li>
    

  </ul>
  

</section>
`;
